Fix missing closing </header> tag

--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -11,6 +11,7 @@ section_class: dbd
       <h2 class="subtitle">{{ page.subtitle }}</h2>
       {% endif %}
     </hgroup>
+  </header>
 
   <div class="article-container group">
     <div class="inner">
