Style intro & list headers

--- a/service-manual/assets/stylesheets/views/_standard.scss
+++ b/service-manual/assets/stylesheets/views/_standard.scss
@@ -14,7 +14,56 @@
   }
 
   .inner {
-    padding: 0
+    padding: 0 2em;
+  }
+
+  .intro {
+    @include media(desktop) {
+      width: 75%;
+    }
+  }
+
+  .headings {
+    display: block;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+    @extend %contain-floats;
+
+    li#standard-header-item {
+      display: inline-block;
+      margin: 0;
+      padding: 0;
+
+      @include media(tablet) {
+        width: 75%;
+        float: left;
+      }
+
+      h2#standard-header {
+        @include core-24;
+        margin: 0;
+        padding: 0;
+      }
+    }
+
+    li#guidance-header-item {
+      display: none;
+
+      @include media(tablet) {
+        display: inline-block;
+        width: 25%;
+        margin: 0;
+        padding: 0;
+      }
+
+      h3#guidance-header {
+        @include core-24;
+        margin: 0;
+        padding: 0;
+      }
+    }
   }
 
   // The list of criteria
@@ -76,12 +125,21 @@
         overflow: hidden;
         margin: 0.5em 0 0 0;
         padding: 0.5em 0 0 0;
-        border-top: 1px solid $grey-3;
 
         &:first-child {
           border: none;
           margin-top: 0;
         }
+      }
+    }
+  }
+
+  .link-list {
+    padding-bottom: 2em;
+
+    li {
+      a {
+        width: auto;
       }
     }
   }
