--- a/service-manual/assets/stylesheets/views/_standard.scss
+++ b/service-manual/assets/stylesheets/views/_standard.scss
@@ -7,9 +7,21 @@
   .page-header {
     h1 {
       background: url('/service-manual/assets/images/DbD-kitemark.png') no-repeat 0 0.5em;
-      height: 150px;
-      background-size: Auto 74%;
+      background-size: 100%;
       text-indent: -9999px;
+
+      width: 100%;
+      height: 100px;
+
+      @include media(tablet) {
+        width: 75%;
+        height: 140px;
+      }
+
+      @include media(desktop) {
+        height: 150px;
+        background-size: Auto 74%;
+      }
     }
   }
 
@@ -20,6 +32,10 @@
   .intro {
     @include media(desktop) {
       width: 75%;
+    }
+
+    h2 {
+      margin-top: 0;
     }
   }
 
