Add disclaimer to footer

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -43,6 +43,8 @@
         <li>Built by the <a href="http://digital.cabinetoffice.gov.uk/">Government Digital Service</a></li>
       </ul>
       <p>All content is available under the <a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/">Open Government Licence</a>, except where otherwise stated</p>
+
+      <p>Hyperlinks are provided for your convenience only. We do not take responsibility for the reliability or content of linked websites. Neither does a hyperlink indicate endorsement of a particular website or organisation</p>
     </nav>
     <div class="copyright">
       <a href="http://www.nationalarchives.gov.uk/information-management/our-services/crown-copyright.htm">© Crown Copyright</a>
