Update assets & navigation styles

--- a/service-manual/assets/stylesheets/main.scss
+++ b/service-manual/assets/stylesheets/main.scss
@@ -5,9 +5,12 @@
 // From the toolkit
 @import "../toolkit/stylesheets/_colours";
 @import "../toolkit/stylesheets/_css3";
+@import "../toolkit/stylesheets/_device-pixels";
 @import "../toolkit/stylesheets/_typography";
 @import "../toolkit/stylesheets/_conditionals";
 @import "../toolkit/stylesheets/_shims";
+
+@import "helpers/_conditionals2.scss";
 
 // style-guide
 @import "styleguide/_colours.scss";
@@ -28,11 +31,10 @@
 
 // Helpers
 @import "helpers/_breadcrumbs.scss";
-@import "helpers/_caveat-notice.scss";
 @import "helpers/_contents.scss";
 @import "helpers/_github-links.scss";
 @import "helpers/_global-nav.scss";
-@import "helpers/link-list.scss";
+@import "helpers/_link-list.scss";
 @import "helpers/_page-header.scss";
 @import "helpers/_page-header-meta.scss";
 @import "helpers/_page-status.scss";
