--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -2,6 +2,7 @@
 layout: default-wrapper
 section_class: dbd
 ---
+{% include _breadcrumbs.html %}
 
 <article role="article" class="group">
   <header class="page-header group">
