--- a/service-manual/assets/stylesheets/views/_standard.scss
+++ b/service-manual/assets/stylesheets/views/_standard.scss
@@ -108,6 +108,7 @@
         display: inline-block;
         float: left;
         margin-right:5%;
+        text-align: right;
 
         @include bold-80;
 
