Add accessible media player js

--- a/_includes/_head.assets.html
+++ b/_includes/_head.assets.html
@@ -35,6 +35,8 @@
 
 <!--[if gte IE 9]><!--><link href="https://assets.digital.cabinet-office.gov.uk/static/fonts-0fb6b917e34e45c93a44eec72dcc21de.css" media="all" rel="stylesheet" type="text/css"> <!--<![endif]-->
 
+<link href="https://assets.digital.cabinet-office.gov.uk/frontend/media-player-4d52c02c18a460340db1ed476b807bf6.css" media="screen" rel="stylesheet" type="text/css">
+
 <!--[if lt IE 9]><script src="https://assets.digital.cabinet-office.gov.uk/static/ie-27ccded64045ab36dbfb67c2f47c362b.js" type="text/javascript"></script><![endif]-->
 
 <link rel="shortcut icon" href="https://assets.digital.cabinet-office.gov.uk/static/favicon-447e4ac1ab790342660eacfe3dcce264.ico" type="image/x-icon">
@@ -76,3 +78,4 @@
 </script>
 
 <script src="/service-manual/assets/javascript/toggler.js?cache={{ site.time | date: "%s" }}" type="text/javascript"></script>
+<script src="/service-manual/assets/javascript/media-player-loader.js?cache={{ site.time | date: "%s" }}" type="text/javascript"></script>
