--- a/service-manual/assets/stylesheets/views/_standard.scss
+++ b/service-manual/assets/stylesheets/views/_standard.scss
@@ -5,7 +5,8 @@
 .dbd {
   // Swap standard header for DbD kitemark
   header.page-header {
-    margin-bottom: 0;
+    margin-bottom: 0.5em;
+    margin-top: 2em;
     padding-bottom: 1em;
     border-bottom: none;
     h1 {
@@ -22,7 +23,7 @@
 
       @include media(desktop) {
         height: 150px;
-        background-size: Auto 74%;
+        background-size: Auto 80%;
       }
     }
   }
@@ -154,6 +155,7 @@
         padding-left: 0;
 
         li {
+          margin-left: 0;
           font-size: 16px;
           list-style: none;
           overflow: hidden;
