Add 'retirement' to phases list

--- a/_includes/_phases.html
+++ b/_includes/_phases.html
@@ -31,4 +31,13 @@
     <p><a href="/service-manual/phases/live.html">Learn about the live phase</a></p>
 
   </li>
+
+  <li class="retirement">
+    <h3><a href="/service-manual/phases/live.html">Retirement</a></h3>
+
+    <p>Even the best services may eventually reach retirement. That should be treated with the same care as went into the building and maintaining of that service.</p>
+
+    <p><a href="/service-manual/phases/retirement.html">Learn about the retirement phase</a></p>
+
+  </li>
 </ul>
