--- a/service-manual/assets/stylesheets/styleguide/_colours.scss
+++ b/service-manual/assets/stylesheets/styleguide/_colours.scss
@@ -11,4 +11,4 @@ $inception-colour: $pink-50;
 $beta-colour: $orange;
 $live-colour: $grass-green;
 $operational-colour: $grass-green-50;
-$decommissioning-colour: $grey-3;
+$retirement-colour: $grey-2;
