Remove about page and header link

--- a/_includes/_global-nav.html
+++ b/_includes/_global-nav.html
@@ -8,7 +8,7 @@
     <nav role="navigation" class="content">
       <ul id="navigation">
         <li><a href="/service-manual/digital-by-default" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by Default Service Standard</a></li>
-        <li><a href="/service-manual/about" {% if page.section == 'about' %}class="current"{% endif %}>About</a></li>
+        <li><a href="/service-manual/start" {% if page.section == 'start' %}class="current"{% endif %}>Start using the manual</a></li>
         <li><a href="/feedback">Feedback</a></li>
       </ul>
     </nav>
