--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -25,7 +25,7 @@
             <a href="/service-manual" id="proposition-name">Government Service Design Manual</a>
             <ul id="proposition-links">
               <li><a href="/service-manual/digital-by-default" class="">Digital by Default Service Standard</a></li>
-              <li><a href="/service-manual/about" class="">About</a></li>
+              <li><a href="/service-manual/start" class="">Start using the manual</a></li>
               <li><a href="/feedback" class="">Feedback</a></li>
             </ul>
           </nav>
