--- a/service-manual/assets/stylesheets/main.scss
+++ b/service-manual/assets/stylesheets/main.scss
@@ -33,13 +33,14 @@
 @import "helpers/_contents.scss";
 @import "helpers/_github-links.scss";
 @import "helpers/_global-nav.scss";
-@import "helpers/link-list.scss";
+@import "helpers/_link-list.scss";
 @import "helpers/_page-header.scss";
 @import "helpers/_page-header-meta.scss";
 @import "helpers/_page-status.scss";
 @import "helpers/_role-links.scss";
 @import "helpers/_tables.scss";
 @import "helpers/_tooltip.scss";
+@import "helpers/_inline-images.scss";
 
 // Views
 @import "views/_default.scss";
