Remove whitespace from IE8 stylesheet link

--- a/_includes/_head.assets.html
+++ b/_includes/_head.assets.html
@@ -13,8 +13,7 @@
   <link href="/service-manual/assets/stylesheets/main-ie7.css?cache={{ site.time | date: "%s" }}" media="screen" rel="stylesheet" type="text/css">
 <![endif]-->
 <!--[if IE 8]>
-  <link href="https://assets.digital.cabinet-office.gov.uk/static/application-ie8-
-  2b95aacef7f3529d9d4c79bb61d173ee.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="https://assets.digital.cabinet-office.gov.uk/static/application-ie8-2b95aacef7f3529d9d4c79bb61d173ee.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="/service-manual/assets/stylesheets/main-ie8.css?cache={{ site.time | date: "%s" }}" media="screen" rel="stylesheet" type="text/css">
 <![endif]-->
 
