Update static assets to latest version

--- a/service-manual/assets/stylesheets/helpers/_global-nav.scss
+++ b/service-manual/assets/stylesheets/helpers/_global-nav.scss
@@ -16,7 +16,7 @@
 
     .header-proposition {
       #proposition-name {
-        color: $main-colour;
+        color: $white;
       }
       #proposition-links {
         li {
