--- a/_includes/_head.assets.html
+++ b/_includes/_head.assets.html
@@ -1,23 +1,24 @@
 <!-- Stylesheets from static -->
 
 <!--[if gt IE 8]><!-->
-  <link href="https://assets.digital.cabinet-office.gov.uk/static/application-03571a509cdb2eb334a347191663c9bb.css" media="screen" rel="stylesheet" type="text/css">
-  <link href="/service-manual/assets/stylesheets/main.css?cache={{ site.time | date: "%s" }}" media="screen" rel="stylesheet" type="text/css">
+  <link href="https://assets.digital.cabinet-office.gov.uk/static/application-32698280bd6ca5d99046949db1458750.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/service-manual/assets/stylesheets/main.css?cache={{ site.time | date: "%s" }}" media="screen" rel="stylesheet" type="text/css" />
 <!--<![endif]-->
 <!--[if IE 6]>
-  <link href="https://assets.digital.cabinet-office.gov.uk/static/application-ie6-dc44ee9b31f9da4f4de62d6bfb2e1dc9.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="/service-manual/assets/stylesheets/main-ie6.css?cache={{ site.time | date: "%s" }}" media="screen" rel="stylesheet" type="text/css">
+  <link href="https://assets.digital.cabinet-office.gov.uk/static/application-ie6-37c4d65b5fe3d8b6497a669cb7c3b6e3.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/service-manual/assets/stylesheets/main-ie6.css?cache={{ site.time | date: "%s" }}" media="screen" rel="stylesheet" type="text/css" />
 <![endif]-->
 <!--[if IE 7]>
-  <link href="https://assets.digital.cabinet-office.gov.uk/static/application-ie7-3f13af8508d093d6a773a39909bae8ee.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="/service-manual/assets/stylesheets/main-ie7.css?cache={{ site.time | date: "%s" }}" media="screen" rel="stylesheet" type="text/css">
+  <link href="https://assets.digital.cabinet-office.gov.uk/static/application-ie7-781ae9043c1cb57d37fd84c6fa9b56bc.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/service-manual/assets/stylesheets/main-ie7.css?cache={{ site.time | date: "%s" }}" media="screen" rel="stylesheet" type="text/css" />
 <![endif]-->
 <!--[if IE 8]>
-  <link href="https://assets.digital.cabinet-office.gov.uk/static/application-ie8-2b95aacef7f3529d9d4c79bb61d173ee.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="/service-manual/assets/stylesheets/main-ie8.css?cache={{ site.time | date: "%s" }}" media="screen" rel="stylesheet" type="text/css">
+  <link href="https://assets.digital.cabinet-office.gov.uk/static/application-ie8-cd98ff95a99e3361c595fa1e1fa35a9e.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/service-manual/assets/stylesheets/main-ie8.css?cache={{ site.time | date: "%s" }}" media="screen" rel="stylesheet" type="text/css" />
 <![endif]-->
 
-<link href="https://assets.digital.cabinet-office.gov.uk/static/print-a250641f33ac06dba78975b0c65f8ac9.css" media="print" rel="stylesheet" type="text/css">
+<link href="https://assets.digital.cabinet-office.gov.uk/static/print-7bdad4013aad13ea10c21a3b38b9ddee.css" media="print" rel="stylesheet" type="text/css" />
+
 
 <!--[if IE 8]>
 <script type="text/javascript">
@@ -32,13 +33,14 @@
 </script>
 <![endif]-->
 
-<!--[if gte IE 9]><!--><link href="https://assets.digital.cabinet-office.gov.uk/static/fonts-0fb6b917e34e45c93a44eec72dcc21de.css" media="all" rel="stylesheet" type="text/css"> <!--<![endif]-->
+<!--[if gte IE 9]><!--><link href="https://assets.digital.cabinet-office.gov.uk/static/fonts-0fb6b917e34e45c93a44eec72dcc21de.css" media="all" rel="stylesheet" type="text/css" /><!--<![endif]-->
 
 <link href="https://assets.digital.cabinet-office.gov.uk/frontend/media-player-4d52c02c18a460340db1ed476b807bf6.css" media="screen" rel="stylesheet" type="text/css">
 
 <!--[if lt IE 9]><script src="https://assets.digital.cabinet-office.gov.uk/static/ie-27ccded64045ab36dbfb67c2f47c362b.js" type="text/javascript"></script><![endif]-->
 
-<link rel="shortcut icon" href="https://assets.digital.cabinet-office.gov.uk/static/favicon-447e4ac1ab790342660eacfe3dcce264.ico" type="image/x-icon">
+<link rel="shortcut icon" href="https://assets.digital.cabinet-office.gov.uk/static/favicon-447e4ac1ab790342660eacfe3dcce264.ico" type="image/x-icon" />
+
 <!-- For third-generation iPad with high-resolution Retina display: -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://assets.digital.cabinet-office.gov.uk/static/apple-touch-icon-144x144-4e306e01c31e237722b82b7aa7130082.png">
 <!-- For iPhone with high-resolution Retina display: -->
@@ -47,6 +49,9 @@
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://assets.digital.cabinet-office.gov.uk/static/apple-touch-icon-72x72-2ddbe540853e3ba0d30fbad2a95eab3c.png">
 <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
 <link rel="apple-touch-icon-precomposed" href="https://assets.digital.cabinet-office.gov.uk/static/apple-touch-icon-57x57-37527434942ed8407b091aae5feff3f3.png">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="og:image" content="https://assets.digital.cabinet-office.gov.uk/static/opengraph-image-4e469785ca4cc8f8dd18d0627bc43d19.png">
 
 <script src="https://assets.digital.cabinet-office.gov.uk/static/libs/jquery/jquery-1.7.2-2ce4706f8f7193defaa9e7df2b641e9a.js" type="text/javascript"></script><script defer src="https://assets.digital.cabinet-office.gov.uk/static/application-e5938d4ac4939ea75375d1a4d52eee96.js" type="text/javascript"></script>
 
