Add CTO role page

--- a/_includes/_role-links.html
+++ b/_includes/_role-links.html
@@ -6,4 +6,5 @@
   <li><a href="/service-manual/user-researchers">User researchers</a></li>
   <li><a href="/service-manual/web-ops">Web operations</a></li>
   <li><a href="/service-manual/performance-analysts">Performance analysts</a></li>
+  <li><a href="/service-manual/chief-technology-officers">Chief technology officers</a></li>
 </ul>
