Branding as per Russell's edict

--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -3,7 +3,7 @@
   <div class="header-wrapper">
     <div class="header-global">
       <div class="header-logo">
-        <a href="/" title="Go to the gov.uk homepage" id="logo" class="content">
+        <a href="/" title="Go to the GOV.UK homepage" id="logo" class="content">
           <img src="https://assets.digital.cabinet-office.gov.uk/static/gov.uk_logotype-2x-24145374d271079f08d96c618cc8d4a5.png" alt="GOV.UK">
         </a>
         <a href="#search" class="search-toggle js-header-toggle">Search</a>
