--- a/service-manual/assets/toolkit/stylesheets/_typography.scss
+++ b/service-manual/assets/toolkit/stylesheets/_typography.scss
@@ -6,7 +6,7 @@
 //  ANATOMY OF A TYPE STYLE
 //  -----------------------
 //  These are a collection of graphic styles. They are deliberately
-//  abstracted from semantic HTML context to enable flexible re-use.
+//  abstracted from semantic HTML context to enable flexible reuse.
 //  Although there is a lot of duplication within this file, as long
 //  as you GZIP your CSS it shouldnt cause any bloat.
 
