--- a/service-manual/assets/stylesheets/main.scss
+++ b/service-manual/assets/stylesheets/main.scss
@@ -12,6 +12,10 @@
 
 @import "helpers/_conditionals2.scss";
 
+// Layouts & typography
+@import "layouts/_gsdm.scss";
+@import "helpers/_typography.scss";
+
 // style-guide
 @import "styleguide/_colours.scss";
 @import "styleguide/_dimensions.scss";
@@ -69,6 +73,3 @@
 @import "views/_progress-indicator.scss";
 @import "views/_grid.scss";
 
-
-// Layouts
-@import "layouts/_gsdm.scss";
