--- a/service-manual/assets/stylesheets/views/_standard.scss
+++ b/service-manual/assets/stylesheets/views/_standard.scss
@@ -14,6 +14,18 @@
       margin: 0 auto;
     }
 
+    hgroup {
+      margin: 0 1em;
+
+      @include media(tablet) {
+        margin: 0 2em;
+      }
+
+      @include media(desktop) {
+        margin: 0;
+      }
+    }
+
     h1 {
       background: url('/service-manual/assets/images/DbD-kitemark.png') no-repeat 50% 70%;
       background-size: 100%;
