Move scripts to bottom of HTML
This enables better page performance: http://developer.yahoo.com/blogs/ydn/high-performance-sites-rule-6-move-scripts-bottom-7200.html

--- a/_layouts/gsdm-design-patterns.html
+++ b/_layouts/gsdm-design-patterns.html
@@ -46,5 +46,6 @@
       </section>
     </div><!--end wrapper-->
     {% include _footer.html %}
+    {% include _scripts.html %}
   </body>
 </html>
