--- a/_includes/_head.assets.html
+++ b/_includes/_head.assets.html
@@ -54,7 +54,7 @@
 <meta name="og:image" content="https://assets.digital.cabinet-office.gov.uk/static/opengraph-image-4e469785ca4cc8f8dd18d0627bc43d19.png">
 
 <script src="https://assets.digital.cabinet-office.gov.uk/static/libs/jquery/jquery-1.7.2-2ce4706f8f7193defaa9e7df2b641e9a.js" type="text/javascript"></script>
-<script defer="defer" src="https://assets.digital.cabinet-office.gov.uk/static/header-footer-only-597bdeb43191ea19b4f63233807d51f3.js" type="text/javascript"></script>
+<script defer src="https://assets.digital.cabinet-office.gov.uk/static/application-e5938d4ac4939ea75375d1a4d52eee96.js" type="text/javascript"></script>
 
 <script id="ga-params" type="text/javascript">
   var GOVUK = GOVUK || {};
