Add default button font-size
Also improve explanation for separation of CSS and
HTML.

--- a/service-manual/assets/stylesheets/design-patterns/_buttons.scss
+++ b/service-manual/assets/stylesheets/design-patterns/_buttons.scss
@@ -22,6 +22,7 @@
   }
 
   // Text
+  font-size: 1em; // inherit size from parent
   line-height: 1.25;
   text-decoration: none;
   -webkit-font-smoothing: antialiased;
