Fixed padding for mobile views

--- a/service-manual/assets/stylesheets/views/_detailed-guidance.scss
+++ b/service-manual/assets/stylesheets/views/_detailed-guidance.scss
@@ -1,6 +1,8 @@
 .detailed-guidance {
   .article-container {
     .inner {
+      padding: 0 1em;
+
       @include media(desktop) {
         margin-left: 25%;
       }
