1st pass at a print stylesheet

--- a/_includes/_head.assets.html
+++ b/_includes/_head.assets.html
@@ -17,8 +17,9 @@
   <link href="/service-manual/assets/stylesheets/main-ie8.css?cache={{ site.time | date: "%s" }}" media="screen" rel="stylesheet" type="text/css" />
 <![endif]-->
 
-<link href="https://assets.digital.cabinet-office.gov.uk/static/print-7bdad4013aad13ea10c21a3b38b9ddee.css" media="print" rel="stylesheet" type="text/css" />
 
+<link href="https://assets.digital.cabinet-office.gov.uk/static/print-7bdad4013aad13ea10c21a3b38b9ddee.css" media="print" rel="stylesheet" type="text/css" />
+<link href="/service-manual/assets/stylesheets/print.css?cache={{ site.time | date: "%s" }}" media="print" rel="stylesheet" type="text/css" />
 
 <!--[if IE 8]>
 <script type="text/javascript">
