--- a/service-manual/assets/stylesheets/views/_standard.scss
+++ b/service-manual/assets/stylesheets/views/_standard.scss
@@ -3,6 +3,19 @@
 //
 
 .dbd {
+
+  @if $is-print == true {
+    .header-wrapper{
+      display: none;
+    }
+    article{
+      width: 90%;
+    }
+    article header h1{
+      border-top: none;
+    }
+  }
+
   // Swap standard header for DbD kitemark
   header.page-header {
     margin: 2em 0 0.5em 0em;
@@ -30,10 +43,12 @@
     }
 
     h1 {
+      @if $is-print == true {
+        display: none;
+      }
       background: url('/service-manual/assets/images/DbD-kitemark.png') no-repeat 50% 70%;
       background-size: 100%;
       text-indent: -9999px;
-
       width: 100%;
       height: 100px;
 
@@ -56,6 +71,13 @@
     @include media(desktop) {
       width: 67%;
       margin: 0 auto;
+    }
+    
+    img{
+      margin-bottom: 1.5em;
+      @if $is-print == false {
+        display: none;
+      }
     }
 
     h2 {
@@ -104,7 +126,7 @@
 
   // The list of criteria
   .standard {
-    display: inline-block;
+    //display: inline-block;
     vertical-align: middle;
     padding: 0;
 
@@ -118,6 +140,8 @@
       padding: 2em 0 2em 0;
       margin: 0;
       @extend %contain-floats;
+
+     // page-break-inside: avoid;
 
       &:first-child{
         border-top: 5px solid $main-colour;
@@ -137,6 +161,10 @@
         @include media(tablet) {
           width: 10%;
         }
+
+        @if $is-print == true {
+          width: 10%;
+        }
       }
 
       .point {
@@ -150,7 +178,11 @@
           }
           float: left;
         }
+
+        width: 67%;
+        float: left;
       }
+      
     }
 
     .guidance {
@@ -187,6 +219,7 @@
         }
       }
     }
+
   }
 
   .link-list {
