Restyle phase page navigation

--- a/service-manual/assets/stylesheets/views/_phases.scss
+++ b/service-manual/assets/stylesheets/views/_phases.scss
@@ -5,6 +5,15 @@
  .meta-phases{
   display: none;
  }
+
+  .phase-nav{
+    margin: 3em 0;
+    padding: 0;
+    li{
+      list-style-type: none;
+      padding-left: 0;
+    }
+  }
 }
 
 // Phases
